--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,7 +17,7 @@
    <widget class="QTableView" name="tableView">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>20</x>
       <y>20</y>
       <width>571</width>
       <height>431</height>
@@ -48,6 +48,16 @@
     </property>
     <property name="text">
      <string>Введите регион</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="line_file_pass">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>170</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
     </property>
    </widget>
   </widget>
